@@ -1,12 +1,7 @@
-import org.gradle.api.tasks.compile.JavaCompile
-import org.jetbrains.kotlin.gradle.tasks.KotlinJvmCompile
-
 plugins {
     id("common-configuration")
-    id("test-federation-convention")
     id("com.autonomousapps.dependency-analysis")
     kotlin("jvm")
-    id("project-tests-convention")
     id("test-inputs-check")
 }
 
@@ -41,12 +36,11 @@ dependencies {
     "jdk25CompileOnly"(kotlinStdlib())
 }
 
-tasks.named<KotlinJvmCompile>("compileJdk25Kotlin") {
-    configureTaskToolchain(JdkMajorVersion.JDK_25_0)
-}
-
-tasks.named<JavaCompile>("compileJdk25Java") {
-    configureTaskToolchain(JdkMajorVersion.JDK_25_0)
+jvmToolchains {
+    configureForSourceSet("jdk25") {
+        jdkVersion = JdkMajorVersion.JDK_25_0
+        targetBytecodeVersion = JdkMajorVersion.JDK_25_0
+    }
 }
 
 /*
@@ -91,13 +85,5 @@ projectTests {
         skipInLocalBuild = false,
     ) {
         systemProperty("kotlin.unsafe.mem.test.mode", "jdk25")
-
-        // `UnsafeBasedMemoryAccess` is also tested in this task, so this flag is needed to suppress warnings.
-        // See also https://openjdk.org/jeps/498.
-        jvmArgs("--sun-misc-unsafe-memory-access=allow")
-
-        // `MemorySegmentMemoryAccess` uses "restricted" FFM APIs, so this flag is needed to suppress warnings.
-        // See also https://openjdk.org/jeps/454.
-        jvmArgs("--enable-native-access=ALL-UNNAMED")
     }
 }
